@startuml SmartHire_Architecture
title SmartHire System Architecture

node "Frontend (React)" as frontend
node "Backend (Node.js/Express)" as backend
node "AI Microservice (FastAPI)" as ai
database "MongoDB" as db

frontend <-> backend : REST API / JWT
backend <-> ai : REST API
backend <-> db : Mongoose ODM
@enduml

@startuml DFD_Level_0
title DFD Level 0 (Context Diagram)
actor User
process "SmartHire System" as system

User -> system : Upload Resume / Posts
system -> User : ATS Score / Ranked Feed
@enduml

@startuml DFD_Level_1
title DFD Level 1
actor User
process "Authentication" as auth
process "Resume Analyzer" as resume
process "Smart Feed Engine" as feed
database MongoDB as db

User -> auth : Login Credentials
auth -> User : JWT Token

User -> resume : Upload PDF
resume -> db : Save Extracted Skills
db -> User : Profile Dashboard

User -> feed : View Feed
feed -> db : Fetch Posts
feed -> User : Ranked Posts
@enduml

@startuml DFD_Level_2_Resume
title DFD Level 2 - Resume Analysis Process
actor User
component "Node.js Server" as node
component "FastAPI Service" as fastapi
component "PyMuPDF (fitz)" as mupdf
component "spaCy (NER)" as spacy
database "MongoDB" as db

User -> node : Upload PDF
node -> fastapi : Forward File
fastapi -> mupdf : Extract Raw Text
mupdf -> fastapi : Text String
fastapi -> spacy : Extract Skills/Education
spacy -> fastapi : Entities List
fastapi -> fastapi : Calculate ATS Score
fastapi -> node : JSON Result
node -> db : Save Analysis Data
node -> User : Display Results
@enduml

@startuml Class_Diagram
title SmartHire Class Diagram (Mongoose Models)

class User {
  +String firstName
  +String lastName
  +String email
  +String role
  +String[] skills
  +Number atsScore
  +ObjectId[] friends
  +verifyPassword()
}

class Post {
  +ObjectId userId
  +String description
  +String image
  +String[] likes
  +ObjectId[] comments
}

class Comment {
  +ObjectId userId
  +ObjectId postId
  +String comment
  +Object[] replies
}

class Job {
  +String title
  +String description
  +String[] requiredSkills
  +ObjectId recruiterId
  +String status
}

User "1" -- "0..*" Post : creates
Post "1" -- "0..*" Comment : contains
User "1" -- "0..*" Comment : writes
User "1" -- "0..*" Job : manages (if recruiter)
@enduml

@startuml Activity_Diagram
title Activity Diagram - Resume Analysis Workflow
start
:User Logs In;
:Navigate to Resume Analysis;
:Upload PDF File;
if (File is PDF?) then (yes)
  :Send to Backend;
  :Extract Text;
  :Identify Skills via AI;
  :Calculate Match Score;
  :Update Database;
  :Display ATS Report;
else (no)
  :Show Error Message;
endif
stop
@enduml

@startuml SmartFeed_Logic
title Smart Feed Ranking Logic (Flowchart)
start
:Fetch All Posts;
:Fetch User Skills;
:Convert User Skills to Vector;
repeat
  :Take Next Post;
  :Extract Post Description;
  :Convert Description to Vector;
  :Calculate Cosine Similarity;
  :Assign Score to Post;
repeat while (more posts?)
:Sort Posts by Score Descending;
:Return Ranked Feed;
stop
@enduml

@startuml Gantt_Chart
[Requirement Analysis] lasts 10 days
[System Design] lasts 15 days
[Backend Development] lasts 20 days
[AI Service Implementation] lasts 15 days
[Frontend Development] lasts 25 days
[Integration & Testing] lasts 15 days
[Documentation] lasts 7 days

[System Design] starts at [Requirement Analysis]'s end
[Backend Development] starts at [System Design]'s end
[AI Service Implementation] starts at [System Design]'s end
[Frontend Development] starts at [Backend Development]'s start
[Integration & Testing] starts at [Frontend Development]'s end
[Documentation] starts at [Integration & Testing]'s end
@enduml
